--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
                     <a class="nav-link text-light" href="">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="/customer">Customers</a>
+                    <a class="nav-link text-light" href="/EBMSFrontEnd/customer">Customers</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="/calculate-bill">Calculate Bill</a>
