Redirect links updated

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,10 +14,10 @@
                     <a class="nav-link text-light" href="/EBMSFrontEnd/customer">Customers</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="/calculate-bill">Calculate Bill</a>
+                    <a class="nav-link text-light" href="/EBMSFrontEnd/calculate-bill">Calculate Bill</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="/view-bills">View Bills</a>
+                    <a class="nav-link text-light" href="/EBMSFrontEnd/view-bills">View Bills</a>
                 </li>
             </ul>
         </div>
