--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,11 +6,11 @@
             collected. </p>
         <div class="btn-group" role="group" aria-label="Basic example">
             <button type="button" class="btn btn-primary"><a class="text-decoration-none text-light"
-                    href="/customer">Customers</a></button>&nbsp;
+                    href="/EBMSFrontEnd/customer">Customers</a></button>&nbsp;
             <button type="button" class="btn btn-primary"><a class="text-decoration-none text-light"
-                    href="/customer">Calculate Bill</a></button>&nbsp;
+                    href="/EBMSFrontEnd/calculate-bill">Calculate Bill</a></button>&nbsp;
             <button type="button" class="btn btn-primary"><a class="text-decoration-none text-light"
-                    href="/customer">View Bills</a></button>
+                    href="/EBMSFrontEnd/view-bills">View Bills</a></button>
         </div>
     </div>
 </div>
